[gd_scene load_steps=2 format=3 uid="uid://cfqmywl025qul"]

[ext_resource type="Script" path="res://scripts/barra_control.gd" id="1_wgq32"]

[node name="BarraControl" type="Control" groups=["barra_control"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgq32")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VSplitContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VSplitContainer/HBoxContainer2" groups=["txt_delay"]]
custom_minimum_size = Vector2(82.94, 0)
layout_mode = 2
placeholder_text = "delay"

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VSplitContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VSplitContainer"]
layout_mode = 2

[node name="btn_atras" type="Button" parent="CenterContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "atras"

[node name="btn_reproducir" type="Button" parent="CenterContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "reproducir"

[node name="btn_detener" type="Button" parent="CenterContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "detener"

[node name="btn_adelante" type="Button" parent="CenterContainer/VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "adelante"

[connection signal="focus_exited" from="CenterContainer/VSplitContainer/HBoxContainer2/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="CenterContainer/VSplitContainer/HBoxContainer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="CenterContainer/VSplitContainer/HBoxContainer/btn_atras" to="." method="_on_btn_atras_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer/HBoxContainer/btn_reproducir" to="." method="_on_btn_reproducir_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer/HBoxContainer/btn_detener" to="." method="_on_btn_detener_pressed"]
[connection signal="pressed" from="CenterContainer/VSplitContainer/HBoxContainer/btn_adelante" to="." method="_on_btn_adelante_pressed"]
